Fix password base64 decoding